pkg/servicemesh/federation/example/config-poc/export/http/destinationrule.yaml
# this just configures mTLS for the ratings service, as this is required when
# accessing the service across the gateways
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ratings-mtls
  namespace: mesh1-bookinfo
spec:
  host: ratings.mesh1-bookinfo.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 9080
        tls:
          mode: ISTIO_MUTUAL
  exportTo:
    - '*'
